--- a/css/table.css
+++ b/css/table.css
@@ -6,13 +6,38 @@
 }
 
 .table-header {
+  position: relative;
   display: flex;
   text-align: center;
   align-items: center;
   justify-content: center;
-  font-size: 27px;
+  font-size: 23px;
   color: #fff;
   width: 25%;
+  user-select: none;
+}
+
+.table-header.sorted::after {
+  content: "▼";
+  position: absolute;
+  top: 50%;
+  color: rgb(248, 139, 139);
+
+  transform: translate(0, -50%);
+  right: 0;
+}
+
+.table-header::after {
+  content: "▲";
+  position: absolute;
+  transform: translate(0, -50%);
+  top: 50%;
+  color: rgb(248, 139, 139);
+  right: 0;
+}
+
+.table-header.unsorted::after {
+  content: "";
 }
 
 .row {
@@ -23,22 +48,20 @@
   column-gap: 10px;
   cursor: pointer;
 }
-
 .header-row {
-  padding: 15px;
+  padding: 10px;
   display: flex;
   align-items: center;
   column-gap: 10px;
   background-color: rgb(135, 104, 237);
+  cursor: pointer;
 }
-
 .cell {
-  font-size: 25px;
+  font-size: 20px;
   text-align: center;
   width: 25%;
   word-wrap: break-word;
 }
-
 .about {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -46,7 +69,6 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
-
 .row:nth-child(even) {
   background-color: rgb(176, 176, 176);
 }
