--- a/css/table.css
+++ b/css/table.css
@@ -70,3 +70,20 @@
 .row:nth-child(even) {
   background-color: rgb(176, 176, 176);
 }
+
+.table-buttons{
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  width: 150px;
+  margin-top: 30px;
+}
+
+.table-button{
+  cursor: pointer;
+  padding: 5px 10px;
+}
+
+.table-button-img{
+  height: 100%;
+}
