--- a/css/table.css
+++ b/css/table.css
@@ -39,7 +39,7 @@
 }
 
 .row {
-  padding: 15px;
+  padding: 5px 10px;
   background-color: rgb(179, 207, 213);
   display: flex;
   align-items: center;
