--- a/css/table.css
+++ b/css/table.css
@@ -45,7 +45,18 @@
   align-items: center;
   column-gap: 10px;
   cursor: pointer;
+  transition: 0.3s;
 }
+
+.row:nth-child(even) {
+  background-color: rgb(176, 176, 176);
+}
+
+.row:hover {
+  background-color: black;
+  color: #fff;
+}
+
 .header-row {
   padding: 10px;
   display: flex;
@@ -67,11 +78,8 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
-.row:nth-child(even) {
-  background-color: rgb(176, 176, 176);
-}
 
-.table-buttons{
+.table-buttons {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -79,11 +87,12 @@
   margin-top: 30px;
 }
 
-.table-button{
+.table-button {
+  user-select: none;
   cursor: pointer;
   padding: 5px 10px;
 }
 
-.table-button-img{
+.table-button-img {
   height: 100%;
 }
