--- a/css/hide-display-form.css
+++ b/css/hide-display-form.css
@@ -15,6 +15,7 @@
   font-size: 24px;
   display: block;
   margin-bottom: 15px;
+  word-wrap: break-word;
 }
 
 .hide-column-form__select {
@@ -24,6 +25,7 @@
   padding: 3px 5px;
   border-radius: 5px;
   margin-right: 5px;
+  margin-bottom: 10px;
 }
 
 .hide-column-form__button {
